force-app/main/default/objects/webForm__c/fields/Under_Contract__c.field-meta.xml
<CustomField>
    <fullName>Under_Contract__c</fullName>
    <label>Under Contract</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>