force-app/main/default/objects/webForm__c/fields/Water_Appointment__c.field-meta.xml
<CustomField>
    <fullName>Water_Appointment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Water Appointment</label>
    <type>Checkbox</type>
</CustomField>