force-app/main/default/objects/webForm__c/fields/Water_Data__c.field-meta.xml
<CustomField>
    <fullName>Water_Data__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Water Data</label>
    <type>Checkbox</type>
</CustomField>