force-app/main/default/objects/webForm__c/fields/Water_Filtration__c.field-meta.xml
<CustomField>
    <fullName>Water_Filtration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Water Filtration</label>
    <type>Checkbox</type>
</CustomField>