force-app/main/default/objects/webForm__c/fields/Water_Filtration_Notes__c.field-meta.xml
<CustomField>
    <fullName>Water_Filtration_Notes__c</fullName>
    <label>Water Filtration Notes</label>
    <type>TextArea</type>
</CustomField>