force-app/main/default/objects/webForm__c/fields/Water_Hot_Lead__c.field-meta.xml
<CustomField>
    <fullName>Water_Hot_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Water Hot Lead</label>
    <type>Checkbox</type>
</CustomField>