force-app/main/default/objects/webForm__c/fields/Water_Marketing__c.field-meta.xml
<CustomField>
    <fullName>Water_Marketing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Water Marketing</label>
    <type>Checkbox</type>
</CustomField>