force-app/main/default/objects/webForm__c/fields/Water_Note__c.field-meta.xml
<CustomField>
    <fullName>Water_Note__c</fullName>
    <label>Water Note</label>
    <type>TextArea</type>
</CustomField>