force-app/main/default/objects/webForm__c/fields/WebForm_Source__c.field-meta.xml
<CustomField>
    <fullName>WebForm_Source__c</fullName>
    <label>WebForm Source</label>
    <length>60</length>
    <type>Text</type>
</CustomField>