force-app/main/default/objects/webForm__c/fields/WebForm_Status__c.field-meta.xml
<CustomField>
    <fullName>WebForm_Status__c</fullName>
    <label>WebForm Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In Process</fullName>
                <default>true</default>
                <label>In Process</label>
            </value>
            <value>
                <fullName>Incomplete</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Send Email</fullName>
            </value>
            <value>
                <fullName>Email Sent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>