force-app/main/default/objects/webForm__c/fields/WebSite__c.field-meta.xml
<CustomField>
    <fullName>WebSite__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Web Site</label>
    <type>Checkbox</type>
</CustomField>