force-app/main/default/objects/webForm__c/fields/Weed_Removal__c.field-meta.xml
<CustomField>
    <fullName>Weed_Removal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Weed Removal</label>
    <type>Checkbox</type>
</CustomField>