force-app/main/default/objects/webForm__c/fields/Weed_Removal_Notes__c.field-meta.xml
<CustomField>
    <fullName>Weed_Removal_Notes__c</fullName>
    <label>Weed Removal Notes</label>
    <type>TextArea</type>
</CustomField>