force-app/main/default/objects/webForm__c/fields/Window_Count_Blinds__c.field-meta.xml
<CustomField>
    <fullName>Window_Count_Blinds__c</fullName>
    <label>Window Count (Blinds)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>