force-app/main/default/objects/webForm__c/fields/Window_Count_Window__c.field-meta.xml
<CustomField>
    <fullName>Window_Count_Window__c</fullName>
    <label>Window Count</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>4-6</fullName>
            </value>
            <value>
                <fullName>7-9</fullName>
            </value>
            <value>
                <fullName>10-12</fullName>
            </value>
            <value>
                <fullName>Over 12</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>