force-app/main/default/objects/webForm__c/fields/Window_Coverings_Wanted__c.field-meta.xml
<CustomField>
    <fullName>Window_Coverings_Wanted__c</fullName>
    <label>Window Coverings Wanted</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Shutters</fullName>
            </value>
            <value>
                <fullName>Blinds</fullName>
            </value>
            <value>
                <fullName>Faux</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>