force-app/main/default/objects/webForm__c/fields/Window_Replacement__c.field-meta.xml
<CustomField>
    <fullName>Window_Replacement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Window Replacement</label>
    <type>Checkbox</type>
</CustomField>