force-app/main/default/objects/webForm__c/fields/Windows_Appointment__c.field-meta.xml
<CustomField>
    <fullName>Windows_Appointment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Windows Appointment</label>
    <type>Checkbox</type>
</CustomField>