force-app/main/default/objects/webForm__c/fields/Windows_Data__c.field-meta.xml
<CustomField>
    <fullName>Windows_Data__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Windows Data</label>
    <type>Checkbox</type>
</CustomField>