force-app/main/default/objects/webForm__c/fields/Windows_Hot_Lead__c.field-meta.xml
<CustomField>
    <fullName>Windows_Hot_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Windows Hot Lead</label>
    <type>Checkbox</type>
</CustomField>