force-app/main/default/objects/webForm__c/fields/Windows_Marketing__c.field-meta.xml
<CustomField>
    <fullName>Windows_Marketing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Windows Marketing</label>
    <type>Checkbox</type>
</CustomField>