force-app/main/default/objects/webForm__c/fields/Windows_Note__c.field-meta.xml
<CustomField>
    <fullName>Windows_Note__c</fullName>
    <label>Windows Note</label>
    <type>TextArea</type>
</CustomField>