force-app/main/default/objects/webForm__c/fields/Windows_Notes__c.field-meta.xml
<CustomField>
    <fullName>Windows_Notes__c</fullName>
    <label>Windows Notes</label>
    <type>TextArea</type>
</CustomField>