force-app/main/default/objects/webForm__c/fields/Windows_Sweepstake__c.field-meta.xml
<CustomField>
    <fullName>Windows_Sweepstake__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Windows</label>
    <type>Checkbox</type>
</CustomField>