force-app/main/default/objects/webForm__c/fields/X1_or_2_Story_House_Pest__c.field-meta.xml
<CustomField>
    <fullName>X1_or_2_Story_House_Pest__c</fullName>
    <label>1 or 2 Story House</label>
    <length>255</length>
    <type>Text</type>
</CustomField>