force-app/main/default/objects/webForm__c/fields/X2_Story__c.field-meta.xml
<CustomField>
    <fullName>X2_Story__c</fullName>
    <defaultValue>false</defaultValue>
    <label>2 Story</label>
    <type>Checkbox</type>
</CustomField>