force-app/main/default/objects/webForm__c/fields/Year_House_was_Built__c.field-meta.xml
<CustomField>
    <fullName>Year_House_was_Built__c</fullName>
    <label>Year House was Built</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>