force-app/main/default/objects/webForm__c/recordTypes/Bath.recordType-meta.xml
<RecordType>
    <fullName>Bath</fullName>
    <active>true</active>
    <label>Bath</label>
</RecordType>