force-app/main/default/objects/webForm__c/recordTypes/Carpet_Tile_Cleaning.recordType-meta.xml
<RecordType>
    <fullName>Carpet_Tile_Cleaning</fullName>
    <active>true</active>
    <label>Carpet &amp; Tile Cleaning</label>
</RecordType>