force-app/main/default/objects/webForm__c/recordTypes/Electric.recordType-meta.xml
<RecordType>
    <fullName>Electric</fullName>
    <active>true</active>
    <label>Electric</label>
</RecordType>