force-app/main/default/objects/webForm__c/recordTypes/Floor_Cleaning.recordType-meta.xml
<RecordType>
    <fullName>Floor_Cleaning</fullName>
    <active>true</active>
    <label>Floor Cleaning</label>
</RecordType>