force-app/main/default/objects/webForm__c/recordTypes/Garage_Doors.recordType-meta.xml
<RecordType>
    <fullName>Garage_Doors</fullName>
    <active>true</active>
    <label>Garage Doors</label>
</RecordType>