force-app/main/default/objects/webForm__c/recordTypes/Garage_Floor_Coating.recordType-meta.xml
<RecordType>
    <fullName>Garage_Floor_Coating</fullName>
    <active>true</active>
    <label>Garage Floor Coating</label>
</RecordType>