force-app/main/default/objects/webForm__c/recordTypes/Handy_Man.recordType-meta.xml
<RecordType>
    <fullName>Handy_Man</fullName>
    <active>true</active>
    <label>Handy Man</label>
</RecordType>