force-app/main/default/objects/webForm__c/recordTypes/Kitchen.recordType-meta.xml
<RecordType>
    <fullName>Kitchen</fullName>
    <active>true</active>
    <label>Kitchen</label>
</RecordType>