force-app/main/default/objects/webForm__c/recordTypes/Kitchen_Bath.recordType-meta.xml
<RecordType>
    <fullName>Kitchen_Bath</fullName>
    <active>true</active>
    <label>Kitchen &amp; Bath</label>
</RecordType>