force-app/main/default/objects/webForm__c/recordTypes/Landscape.recordType-meta.xml
<RecordType>
    <fullName>Landscape</fullName>
    <active>true</active>
    <label>Landscape</label>
</RecordType>