force-app/main/default/objects/webForm__c/recordTypes/Lock_Smith.recordType-meta.xml
<RecordType>
    <fullName>Lock_Smith</fullName>
    <active>true</active>
    <label>Lock Smith</label>
</RecordType>