force-app/main/default/objects/webForm__c/recordTypes/Maid_Service.recordType-meta.xml
<RecordType>
    <fullName>Maid_Service</fullName>
    <active>true</active>
    <label>Maid Service</label>
</RecordType>