force-app/main/default/objects/webForm__c/recordTypes/My_Home_Services.recordType-meta.xml
<RecordType>
    <fullName>My_Home_Services</fullName>
    <active>true</active>
    <label>My Home Services</label>
</RecordType>