force-app/main/default/objects/webForm__c/recordTypes/Plumbing.recordType-meta.xml
<RecordType>
    <fullName>Plumbing</fullName>
    <active>true</active>
    <label>Plumbing</label>
</RecordType>