force-app/main/default/objects/webForm__c/recordTypes/Pool_Maintenance.recordType-meta.xml
<RecordType>
    <fullName>Pool_Maintenance</fullName>
    <active>true</active>
    <label>Pool Maintenance</label>
</RecordType>