force-app/main/default/objects/webForm__c/recordTypes/Sweepstake.recordType-meta.xml
<RecordType>
    <fullName>Sweepstake</fullName>
    <active>true</active>
    <label>Sweepstake</label>
</RecordType>