force-app/main/default/objects/webForm__c/recordTypes/Website.recordType-meta.xml
<RecordType>
    <fullName>Website</fullName>
    <active>true</active>
    <label>Website</label>
</RecordType>