force-app/main/default/objects/webForm__c/recordTypes/Window.recordType-meta.xml
<RecordType>
    <fullName>Window</fullName>
    <active>true</active>
    <label>Window</label>
</RecordType>