force-app/main/default/objects/webForm__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>LAST_UPDATE</columns>
    <columns>CREATED_DATE</columns>
    <columns>ApptSetter__c</columns>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Campaign_Name__c</columns>
    <columns>WebForm_Source__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>