force-app/main/default/objects/webForm__c/listViews/Book_Now.listView-meta.xml
<ListView>
    <fullName>Book_Now</fullName>
    <booleanFilter>1 AND 2</booleanFilter>
    <columns>NAME</columns>
    <columns>Services_Pick__c</columns>
    <columns>Account__c</columns>
    <columns>Phone__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Url__c</columns>
    <columns>Campaign_Name__c</columns>
    <columns>WebForm_Source__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>webForm__c.Website</value>
    </filters>
    <filters>
        <field>Url__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Book Now</label>
</ListView>