force-app/main/default/objects/webForm__c/listViews/Book_Now_N_Ergy_New.listView-meta.xml
<ListView>
    <fullName>Book_Now_N_Ergy_New</fullName>
    <columns>NAME</columns>
    <columns>Services_Pick__c</columns>
    <columns>Account__c</columns>
    <columns>Phone__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Solar</value>
    </filters>
    <filters>
        <field>Url__c</field>
        <operation>contains</operation>
        <value>https://nergysolutions.com/index.php/book-now/</value>
    </filters>
    <label>Book Now N-Ergy New</label>
</ListView>