force-app/main/default/objects/webForm__c/listViews/Book_Now_Water.listView-meta.xml
<ListView>
    <fullName>Book_Now_Water</fullName>
    <columns>NAME</columns>
    <columns>Services_Pick__c</columns>
    <columns>Account__c</columns>
    <columns>Phone__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>webForm__c.Water</value>
    </filters>
    <filters>
        <field>Url__c</field>
        <operation>contains</operation>
        <value>https://aquabrightwater.com/index.php/book-now/</value>
    </filters>
    <label>Book Now Water</label>
</ListView>