force-app/main/default/objects/webForm__c/listViews/Rep_Book.listView-meta.xml
<ListView>
    <fullName>Rep_Book</fullName>
    <booleanFilter>1 AND 2</booleanFilter>
    <columns>NAME</columns>
    <columns>Services_Pick__c</columns>
    <columns>Account__c</columns>
    <columns>Phone__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>webForm__c.Water,webForm__c.Home_Automation,webForm__c.Solar,webForm__c.Window,webForm__c.Pest_Control,webForm__c.Flooring,webForm__c.Blinds_Shutters</value>
    </filters>
    <filters>
        <field>Url__c</field>
        <operation>equals</operation>
    </filters>
    <label>Rep Referrals No URL</label>
</ListView>