force-app/main/default/objects/webForm__c/listViews/Sweepstakes.listView-meta.xml
<ListView>
    <fullName>Sweepstakes</fullName>
    <columns>NAME</columns>
    <columns>Services_Pick__c</columns>
    <columns>Account__c</columns>
    <columns>Phone__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Sweepstake_In_Date__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>I_Accept_Terms__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Sweepstakes</label>
</ListView>