force-app/main/default/objects/webForm__c/listViews/Sweepstakes1.listView-meta.xml
<ListView>
    <fullName>Sweepstakes1</fullName>
    <columns>NAME</columns>
    <columns>Services_Pick__c</columns>
    <columns>Account__c</columns>
    <columns>Phone__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>webForm__c.Solar</value>
    </filters>
    <filters>
        <field>Url__c</field>
        <operation>equals</operation>
        <value>www.gosolarnowaps.com</value>
    </filters>
    <label>Go Solar Now APS</label>
</ListView>