force-app/main/default/objects/webForm__c/listViews/Website_Book_Now.listView-meta.xml
<ListView>
    <fullName>Website_Book_Now</fullName>
    <booleanFilter>1</booleanFilter>
    <columns>NAME</columns>
    <columns>Services_Pick__c</columns>
    <columns>Account__c</columns>
    <columns>Phone__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Url__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>webForm__c.Website</value>
    </filters>
    <label>Website Book Now</label>
</ListView>